@@ -2773,6 +2773,12 @@ a shallow copy of $|x|$, in particular returns $x$ itself when $x \geq 0$, and
 
 \subsec{Comparison operators}
 
+\fun{int}{cmpss}{long s, long t} compares the \kbd{long}~\kbd{s} to the
+\typ{long}~\kbd{t}.
+
+\fun{int}{cmpuu}{ulong u, ulong v} compares the \kbd{ulong}~\kbd{u} to the
+\typ{ulong}~\kbd{v}.
+
 \fun{long}{minss}{long x, long y}
 
 \fun{ulong}{minuu}{ulong x, ulong y}
