@@ -9515,13 +9515,11 @@ numprimchars(ulong N)
 
 /* Space generated by products of two Eisenstein series */
 
-INLINE int
-cmp_small(long a, long b) { return a>b? 1: (a<b? -1: 0); }
 static int
 cmp_small_priority(void *E, GEN a, GEN b)
 {
   GEN prio = (GEN)E;
-  return cmp_small(prio[(long)a], prio[(long)b]);
+  return cmpss(prio[(long)a], prio[(long)b]);
 }
 static long
 znstar_get_expo(GEN G)
@@ -11705,11 +11703,11 @@ mfcosets(GEN gN)
 static int
 cmp_coset(void *E, GEN A, GEN B)
 {
-  long N = (long)E, Nc, c = itou(gcoeff(A,2,1));
-  long r = cmp_small(c, itou(gcoeff(B,2,1)));
+  ulong N = (ulong)E, Nc, c = itou(gcoeff(A,2,1));
+  int r = cmpuu(c, itou(gcoeff(B,2,1)));
   if (r) return r;
   Nc = N / c;
-  return cmp_small(umodiu(gcoeff(A,2,2), Nc), umodiu(gcoeff(B,2,2), Nc));
+  return cmpuu(umodiu(gcoeff(A,2,2), Nc), umodiu(gcoeff(B,2,2), Nc));
 }
 /* M in SL_2(Z) */
 static long
