@@ -5314,7 +5314,9 @@ INLINE int    cmpri(GEN x, GEN y);
 INLINE int    cmprs(GEN x, long y);
 INLINE int    cmpsi(long x, GEN y);
 INLINE int    cmpsr(long x, GEN y);
+INLINE int    cmpss(long a, long b);
 INLINE int    cmpui(ulong x, GEN y);
+INLINE int    cmpuu(ulong a, ulong b);
 INLINE GEN    cxtofp(GEN x, long prec);
 INLINE GEN    divii(GEN a, GEN b);
 INLINE void   diviiz(GEN x, GEN y, GEN z);
